# MyHams

./: .appveyor.yml  .gitignore  DOCKER_USER  Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py
.github/workflows/: build_container.yml  tests.yml
docs/: DOCUMENTACION.md  dev_tools.md  doc_CICD.md  docker.md  tests.md
modules/: producto.py  productoVenta.py
tests/: data.txt  test_producto_venta.py  testing_func.py
