[tool.poetry]
name = "myhams"
version = "0.1.0"
description = "Gestion de dependencias en el proyecto MyHams de la asignatura de Infraestructura Virtual."
authors = ["NachoCarher <nachoch64@correo.ugr.es>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
